--- a/META.yml
+++ b/META.yml
@@ -1,22 +1,27 @@
---- #YAML:1.0
-name: File-Mork
-version: 0.2
+---
+abstract: 'a module to read Mozilla URL history files'
 author:
-  - Module-ised by Simon Wistow <simon@thegestalt.org>
-  - based on
-  - |-
-    Created:  3-Mar-2004 by Jamie Zawinski, Anonymous, and Jacob Post.
-abstract: an single entry in a mork DB
-license: gpl
-requires:
-  HTML::Entities: 0
-  Test::More: 0
+  - 'Module-ised by Simon Wistow <simon@thegestalt.org>'
+build_requires: {}
+configure_requires:
+  Module::Build: '0.4'
 dynamic_config: 1
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.150005'
+license: open_source
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: '1.4'
+name: File-Mork
 provides:
   File::Mork:
     file: lib/File/Mork.pm
-    version: 0.2
+    version: '0.4'
   File::Mork::Entry:
     file: lib/File/Mork.pm
-    version: 0.2
-generated_by: Module::Build version 0.25
+requires:
+  HTML::Entities: '0'
+  Test::More: '0'
+resources:
+  license: http://opensource.org/licenses/gpl-license.php
+version: '0.4'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.016'
